Fix compilation issue for cxf-java2wadl-plugin (post merge)